// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteFilterListModal false canDeleteFilter privilege renders as disabled delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    data-test-subj="mlFilterListsDeleteButton"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as delete button after opening and closing modal 1`] = `
<div>
  <EuiButton
    color="danger"
    data-test-subj="mlFilterListsDeleteButton"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as disabled delete button when no lists selected 1`] = `
<div>
  <EuiButton
    color="danger"
    data-test-subj="mlFilterListsDeleteButton"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders as enabled delete button when a list is selected 1`] = `
<div>
  <EuiButton
    color="danger"
    data-test-subj="mlFilterListsDeleteButton"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
</div>
`;

exports[`DeleteFilterListModal renders modal after clicking delete button 1`] = `
<div>
  <EuiButton
    color="danger"
    data-test-subj="mlFilterListsDeleteButton"
    iconType="trash"
    isDisabled={false}
    key="delete_filter_list"
    onClick={[Function]}
    size="m"
  >
    <FormattedMessage
      defaultMessage="Delete"
      id="xpack.ml.settings.filterLists.deleteFilterListModal.deleteButtonLabel"
      values={Object {}}
    />
  </EuiButton>
  <EuiConfirmModal
    buttonColor="danger"
    cancelButtonText="Cancel"
    className="eui-textBreakWord"
    confirmButtonText="Delete"
    data-test-subj="mlFilterListDeleteConfirmation"
    defaultFocusedButton="confirm"
    onCancel={[Function]}
    onConfirm={[Function]}
    title="Delete 2 filter lists?"
  />
</div>
`;
